--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# binaries
 *.class
 out/
-.idea/
+
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
